[tool.poetry]
name = "larp-flohmarkt"
version = "0.1.0"
description = ""
authors = ["RincewindWizzard <git@magierdinge.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-pdf-export-plugin = "^0.5.10"
mkdocs = "^1.5.3"
mkdocs-glightbox = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
